fixed text alignment on mobile for BoardFeatures

--- a/components/NetworkPage/BoardFeatures/BoardFeatures.module.scss
+++ b/components/NetworkPage/BoardFeatures/BoardFeatures.module.scss
@@ -9,13 +9,19 @@
 
 .wrapper h2 {
   padding-bottom: 2rem;
-  text-align: center;
+
+  @include lg {
+    text-align: center;
+  }
 }
 
 .wrapper>p {
   max-width: 58ch;
-  margin: 0 auto;
-  text-align: center;
+
+  @include lg {
+    margin: 0 auto;
+    text-align: center;
+  }
 }
 
 .wrapper p {
